sports page layout

--- a/_stylus/base/base.styl
+++ b/_stylus/base/base.styl
@@ -1,7 +1,7 @@
 //
 body
     font-weight 400
-    background-color #fff
+    background-color #1B1E26
     position relative
     -webkit-font-smoothing antialiased
     -moz-osx-font-smoothing grayscale
