--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,7 @@ strong {
 }
 body {
   font-weight: 400;
-  background-color: #fff;
+  background-color: #1b1e26;
   position: relative;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -526,14 +526,14 @@ medium {
   }
 }
 .logo {
-  width: 84px;
   display: block;
   margin-top: 10px;
   float: left;
   margin-right: 30px;
-}
-.logo svg {
-  fill: #fff;
+  font-size: 28px;
+  font-weight: 900;
+  font-style: italic;
+  text-transform: uppercase;
 }
 .scroll svg .shape {
   -webkit-transition: all 0.4s ease;
@@ -541,20 +541,18 @@ medium {
   fill: #6a7bff;
 }
 nav.main-nav {
-  position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  height: 52px;
   z-index: 9999;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   padding-top: 20px;
+  padding-bottom: 20px;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
-  font-size: 12px;
-  text-transform: uppercase;
+  font-size: 14px;
   font-weight: 500;
 }
 nav.main-nav .container {
@@ -570,23 +568,13 @@ nav.main-nav ul {
   margin-bottom: 0px;
 }
 nav.main-nav li a {
-  color: #e6e6e6;
   display: inline-block;
-}
-nav.main-nav li a:hover {
-  color: #fff;
 }
 nav.main-nav li {
   float: left;
   border-top: 4px solid transparent;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
-}
-@media only screen and (min-width: 760px) {
-  nav.main-nav li:hover,
-  nav.main-nav li.active {
-    border-top: 4px solid #fff;
-  }
 }
 nav.main-nav .left-nav {
   float: left;
@@ -822,419 +810,77 @@ nav.main-nav .menu-icon .sh3 {
     transform: rotate(360deg);
   }
 }
-.landing .hero {
-  background: -webkit-gradient(linear, left bottom, left top, from(#6a7bff), to(#2ca3ff));
-  background: linear-gradient(0deg, #6a7bff 0%, #2ca3ff 100%);
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  padding: 170px 0 160px;
-  height: auto;
-  margin: 0;
-  position: relative;
+.landing .current-video {
+  float: left;
+  clear: none;
+  text-align: inherit;
+  width: 65.66666666666666%;
+  margin-left: 0%;
+  margin-right: 3%;
 }
-@media only screen and (max-width: 544px) {
-  .landing .hero {
-    padding: 120px 0 80px;
-    height: auto;
-  }
+.landing .current-video::after {
+  content: '';
+  display: table;
+  clear: both;
 }
-.landing .hero .container {
-  text-align: left;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+.landing .current-video:nth-child(n) {
+  margin-right: 3%;
+  float: left;
+  clear: none;
 }
-@media only screen and (max-width: 730px) {
-  .landing .hero .container {
-    text-align: center;
-  }
+.landing .current-video:nth-child(2n) {
+  margin-right: 0%;
+  float: right;
 }
-.landing .hero .hero-headings {
-  z-index: 2;
+.landing .current-video:nth-child(2n + 1) {
+  clear: both;
 }
-@media only screen and (max-width: 730px) {
-  .landing .hero .hero-headings {
-    float: left;
-    clear: none;
-    text-align: inherit;
-    width: 100%;
-    margin-left: 0%;
-    margin-right: 0%;
-  }
-  .landing .hero .hero-headings::after {
-    content: '';
-    display: table;
-    clear: both;
-  }
+.landing .sidebar {
+  float: left;
+  clear: none;
+  text-align: inherit;
+  width: 31.33333333333333%;
+  margin-left: 0%;
+  margin-right: 3%;
 }
-.landing .hero .hero-headings .block__title {
-  color: #fff;
-  position: relative;
-  text-align: left;
+.landing .sidebar::after {
+  content: '';
+  display: table;
+  clear: both;
 }
-@media only screen and (max-width: 730px) {
-  .landing .hero .hero-headings .block__title {
-    text-align: center;
-  }
+.landing .sidebar:nth-child(n) {
+  margin-right: 3%;
+  float: left;
+  clear: none;
 }
-.landing .hero .hero-headings .block__description {
-  color: #f4f4f4;
-  position: relative;
-  text-align: left;
+.landing .sidebar:nth-child(2n) {
+  margin-right: 0%;
+  float: right;
 }
-@media only screen and (max-width: 730px) {
-  .landing .hero .hero-headings .block__description {
-    width: auto;
-    max-width: 360px;
-    float: none;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 0;
-    padding-right: 0;
-    text-align: center;
-  }
-  .landing .hero .hero-headings .block__description::after {
-    content: '';
-    display: table;
-    clear: both;
-  }
+.landing .sidebar:nth-child(2n + 1) {
+  clear: both;
 }
-.landing .hero .explainer-video {
-  z-index: 2;
-  position: relative;
+.landing .sidebar h1 {
+  text-transform: uppercase;
+  color: #2ca3ff;
+  font-size: 24px;
+  text-align: center;
 }
-@media only screen and (max-width: 730px) {
-  .landing .hero .explainer-video {
-    display: none;
-  }
-}
-.landing .hero .explainer-video .browser-top {
-  line-height: 0;
-}
-.landing .hero .explainer-video .browser-top img {
+.landing .sidebar img {
   max-width: 100%;
 }
-.landing .hero .explainer-video .video-player {
-  margin-top: -1px;
-  border-radius: 0px 0px 5px 5px;
-  cursor: pointer;
-  width: 900px;
-  max-width: 100%;
-}
-.landing .hero .explainer-video .absolute-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-.landing .hero .explainer-video .absolute-container .cta__primary--big {
-  background-color: #2ca3ff;
-  color: #fff;
-  margin-top: 0;
-  opacity: 0.3;
-}
-.landing .hero .explainer-video:hover .cta__primary--big {
-  opacity: 1;
-}
-.landing .hero .hero-svg {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-}
-@media only screen and (min-width: 1600px) {
-  .landing .hero .hero-svg {
-    opacity: 0.4;
-  }
-}
-.landing .value-props.blue {
-  background: #e6f4ff;
-}
-.landing .value-props .value-prop {
-  padding: 50px 0;
+.landing .other-videos {
   float: left;
   clear: none;
   text-align: inherit;
   width: 100%;
   margin-left: 0%;
   margin-right: 0%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
 }
-.landing .value-props .value-prop::after {
+.landing .other-videos::after {
   content: '';
   display: table;
   clear: both;
-}
-@media only screen and (max-width: 544px) {
-  .landing .value-props .value-prop {
-    display: block;
-    padding: 60px 0;
-  }
-}
-@media only screen and (max-width: 544px) {
-  .landing .value-props .value-prop-text {
-    float: left;
-    clear: none;
-    text-align: inherit;
-    width: 100%;
-    margin-left: 0%;
-    margin-right: 0%;
-  }
-  .landing .value-props .value-prop-text::after {
-    content: '';
-    display: table;
-    clear: both;
-  }
-}
-.landing .value-props .value-prop-text .visible-xs {
-  max-width: 100%;
-  border-radius: 5px;
-}
-@media only screen and (min-width: 544px) {
-  .landing .value-props .value-prop-text .visible-xs {
-    display: none;
-  }
-}
-.landing .value-props .value-prop-text .visible-xs img {
-  max-width: 100%;
-}
-.landing .value-props .value-prop-text h1 {
-  margin-bottom: 0.992063492063492em;
-}
-.landing .value-props .value-prop-text .cta__primary--big {
-  background-color: #2ca3ff;
-  color: #fff;
-}
-@media only screen and (max-width: 544px) {
-  .landing .value-props .value-prop-animation {
-    display: none;
-  }
-}
-.landing .value-props .value-prop svg {
-  overflow: visible;
-}
-.landing .value-props .value-prop svg circle {
-  -webkit-transition: 200ms all ease-in;
-  transition: 200ms all ease-in;
-  cursor: pointer;
-}
-.landing .value-props .value-prop svg text.non-active {
-  cursor: pointer;
-}
-.landing .value-props .value-prop svg text.non-active:hover {
-  fill: #2ca3ff;
-}
-.landing .try-it {
-  padding: 160px 0;
-  text-align: center;
-}
-.landing .try-it.violet {
-  background: -webkit-gradient(linear, left bottom, left top, from(#926aff), to(#6a7bff));
-  background: linear-gradient(0deg, #926aff 0%, #6a7bff 100%);
-  position: relative;
-}
-.landing .try-it h2,
-.landing .try-it h3 {
-  color: #fff;
-  margin-bottom: 30px;
-}
-.landing .try-it .video-js {
-  margin: 0 auto;
-  border-radius: 5px;
-  width: 100%;
-  max-width: 900px;
-  min-height: 506px;
-  text-align: left;
-}
-.landing .try-it .video-js:focus {
-  outline: none;
-}
-@media only screen and (max-width: 730px) {
-  .landing .try-it .video-js {
-    min-height: 385px;
-  }
-}
-@media only screen and (max-width: 544px) {
-  .landing .try-it .video-js {
-    min-height: 280px;
-  }
-}
-.landing .try-it .video-js .vjs-tech {
-  border-radius: 5px;
-  overflow: hidden;
-}
-.landing .try-it .video-js #createHighlightBtnDiv-bc-0 .cc-container {
-  position: absolute;
-  bottom: 50px;
-  top: auto;
-}
-.landing .try-it .vibbified-svg {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-@media only screen and (max-width: 1024px) {
-  .landing .try-it .vibbified-svg {
-    display: none;
-  }
-}
-.landing .join-us {
-  background-color: #e6f4ff;
-  padding: 160px 0;
-  float: left;
-  clear: none;
-  text-align: inherit;
-  width: 100%;
-  margin-left: 0%;
-  margin-right: 0%;
-  text-align: center;
-}
-.landing .join-us::after {
-  content: '';
-  display: table;
-  clear: both;
-}
-@media only screen and (max-width: 544px) {
-  .landing .join-us {
-    padding: 60px 0;
-  }
-}
-.landing .join-us h2 {
-  width: auto;
-  max-width: 660px;
-  float: none;
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 0;
-  padding-right: 0;
-  margin-bottom: 40px;
-}
-.landing .join-us h2::after {
-  content: '';
-  display: table;
-  clear: both;
-}
-.landing .join-us #thank-you-msg {
-  display: none;
-  margin-bottom: 40px;
-}
-.landing .join-us .cta-create {
-  background: #2ca3ff;
-  color: #fff;
-}
-.landing .join-us .cta-create:hover {
-  background: #0087ef;
-}
-.landing .join-us .nab-form {
-  background: #fff;
-  border-radius: 2px;
-  width: auto;
-  max-width: 730px;
-  float: none;
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 0;
-  padding-right: 0;
-  padding: 40px 100px;
-}
-.landing .join-us .nab-form::after {
-  content: '';
-  display: table;
-  clear: both;
-}
-@media only screen and (max-width: 730px) {
-  .landing .join-us .nab-form {
-    padding: 30px;
-  }
-}
-.landing .join-us .nab-form h4 {
-  font-weight: 500;
-  margin-bottom: 20px;
-}
-.landing .join-us .nab-form form {
-  max-width: 100%;
-  margin: 0 auto;
-}
-.landing .join-us .nab-form label {
-  color: #4a4a4a;
-}
-.landing .join-us .nab-form input {
-  display: block;
-}
-.landing .join-us .nab-form .nab-form-input {
-  width: 100%;
-  resize: none;
-  color: #4a4a4a;
-}
-.landing .join-us .nab-form .cta__primary--big {
-  margin-top: 0;
-  border: 0;
-  background: #2ca3ff;
-  color: #fff;
-  margin: 0 auto;
-}
-.landing .join-us .nab-form .cta__primary--big:hover {
-  background: #0087ef;
-}
-#Engage-Copy.active {
-  font-size: 41.8px;
-}
-#Engage-Copy.non-active {
-  font-size: 20.16px;
-}
-#Analyze.active {
-  font-size: 41.8px;
-}
-#Analyze.non-active {
-  font-size: 20.16px;
-}
-#Monetize.active {
-  font-size: 41.8px;
-}
-#Monetize.non-active {
-  font-size: 20.16px;
-}
-#Attribute.active {
-  font-size: 41.8px;
-}
-#Attribute.non-active {
-  font-size: 20.16px;
-}
-#Amplify.active {
-  font-size: 41.8px;
-}
-#Amplify.non-active {
-  font-size: 20.16px;
 }
 footer {
   background-color: #2e3341;
