--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -1,7 +1,11 @@
 //
 .landing
-  .current-video
+  img
+    max-width 100%
+  .video
     column(2/3, $cycle:2)
+    iframe
+      line-height 0
   .sidebar
     column(1/3, $cycle:2)
     h1
@@ -9,8 +13,32 @@
       color $link-color
       font-size 24px
       text-align center
-    img
-      max-width 100%
   .other-videos
+    margin-top 40px
     span()
     uncycle(2)
+    &-thumb
+      column(1/4, $cycle:4)
+      height 145px
+      a
+        display inline-block
+      img
+        opacity .3
+        transition 200ms all ease-in
+      .svg-play
+        position absolute
+        text-align center
+        left 0
+        right 0
+        top 45px
+      h3
+        text-align center
+        color #fff
+        font-weight 600
+        margin-top -40px
+        transition 200ms all ease-in
+      &:hover
+        img
+          opacity .5
+
+        
