--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -810,7 +810,10 @@ nav.main-nav .menu-icon .sh3 {
     transform: rotate(360deg);
   }
 }
-.landing .current-video {
+.landing img {
+  max-width: 100%;
+}
+.landing .video {
   float: left;
   clear: none;
   text-align: inherit;
@@ -818,22 +821,25 @@ nav.main-nav .menu-icon .sh3 {
   margin-left: 0%;
   margin-right: 3%;
 }
-.landing .current-video::after {
+.landing .video::after {
   content: '';
   display: table;
   clear: both;
 }
-.landing .current-video:nth-child(n) {
+.landing .video:nth-child(n) {
   margin-right: 3%;
   float: left;
   clear: none;
 }
-.landing .current-video:nth-child(2n) {
+.landing .video:nth-child(2n) {
   margin-right: 0%;
   float: right;
 }
-.landing .current-video:nth-child(2n + 1) {
+.landing .video:nth-child(2n + 1) {
   clear: both;
+}
+.landing .video iframe {
+  line-height: 0;
 }
 .landing .sidebar {
   float: left;
@@ -866,10 +872,8 @@ nav.main-nav .menu-icon .sh3 {
   font-size: 24px;
   text-align: center;
 }
-.landing .sidebar img {
-  max-width: 100%;
-}
 .landing .other-videos {
+  margin-top: 40px;
   float: left;
   clear: none;
   text-align: inherit;
@@ -881,6 +885,58 @@ nav.main-nav .menu-icon .sh3 {
   content: '';
   display: table;
   clear: both;
+}
+.landing .other-videos-thumb {
+  float: left;
+  clear: none;
+  text-align: inherit;
+  width: 22.75%;
+  margin-left: 0%;
+  margin-right: 3%;
+  height: 145px;
+}
+.landing .other-videos-thumb::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.landing .other-videos-thumb:nth-child(n) {
+  margin-right: 3%;
+  float: left;
+  clear: none;
+}
+.landing .other-videos-thumb:nth-child(4n) {
+  margin-right: 0%;
+  float: right;
+}
+.landing .other-videos-thumb:nth-child(4n + 1) {
+  clear: both;
+}
+.landing .other-videos-thumb a {
+  display: inline-block;
+}
+.landing .other-videos-thumb img {
+  opacity: 0.3;
+  -webkit-transition: 200ms all ease-in;
+  transition: 200ms all ease-in;
+}
+.landing .other-videos-thumb .svg-play {
+  position: absolute;
+  text-align: center;
+  left: 0;
+  right: 0;
+  top: 45px;
+}
+.landing .other-videos-thumb h3 {
+  text-align: center;
+  color: #fff;
+  font-weight: 600;
+  margin-top: -40px;
+  -webkit-transition: 200ms all ease-in;
+  transition: 200ms all ease-in;
+}
+.landing .other-videos-thumb:hover img {
+  opacity: 0.5;
 }
 footer {
   background-color: #2e3341;
