comedy and vibbify script

--- a/_stylus/base/base.styl
+++ b/_stylus/base/base.styl
@@ -6,6 +6,8 @@ body
     -webkit-font-smoothing antialiased
     -moz-osx-font-smoothing grayscale
     text-rendering geometricPrecision
+    &.comedy-body
+        background-color #181F24
 
 a
     position relative
