--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -40,5 +40,20 @@
       &:hover
         img
           opacity .5
-
-        
+  &.comedy
+    .sidebar
+      h1
+        text-transform uppercase
+        color #fff
+        font-size 24px
+        text-align center
+    .other-videos
+      background #33424D
+      padding-bottom 50px
+      h2
+        font-size 18px
+        font-weight 600
+        color #999
+        text-transform uppercase
+        margin 30px 0 20px
+          
