--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -56,4 +56,10 @@
         color #999
         text-transform uppercase
         margin 30px 0 20px
+#createHighlightBtnDiv-vimeo-0
+  position relative
+  bottom 88px
+  .cc-container
+    bottom 20px
+    top initial
           
