--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -56,11 +56,34 @@
         color #999
         text-transform uppercase
         margin 30px 0 20px
+.video
+    &:hover
+        .cc-container
+            width 200px
+            .cc-btn-container-share
+                opacity 1
+                bottom 50px
+            #plus-sign
+                -webkit-animation spin 400ms ease-in-out
+                animation: spin 400ms ease-in-out
+
+            .cc-btn-container
+                .cc-btn-share
+                    padding: 8px 10px 8px 38px
+                    font-size: 14px
+                .cc-btn
+                    background-color rgba(0, 0, 0, 0.5)
+                    border 2px solid #fff
+                .cc-btn-text
+                    display inline
+                .cc-btn-highlight
+                    padding 11px 14px 11px 46px
+
 #createHighlightBtnDiv-vimeo-0
   position relative
-  bottom 88px
+  bottom 0
   .cc-container
-    bottom 60px
+    bottom 148px
     top initial
     .cc-btn-container-share
       bottom initial
