--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -944,12 +944,37 @@ nav.main-nav .menu-icon .sh3 {
   text-transform: uppercase;
   margin: 30px 0 20px;
 }
+.video:hover .cc-container {
+  width: 200px;
+}
+.video:hover .cc-container .cc-btn-container-share {
+  opacity: 1;
+  bottom: 50px;
+}
+.video:hover .cc-container #plus-sign {
+  -webkit-animation: spin 400ms ease-in-out;
+  animation: spin 400ms ease-in-out;
+}
+.video:hover .cc-container .cc-btn-container .cc-btn-share {
+  padding: 8px 10px 8px 38px;
+  font-size: 14px;
+}
+.video:hover .cc-container .cc-btn-container .cc-btn {
+  background-color: rgba(0,0,0,0.5);
+  border: 2px solid #fff;
+}
+.video:hover .cc-container .cc-btn-container .cc-btn-text {
+  display: inline;
+}
+.video:hover .cc-container .cc-btn-container .cc-btn-highlight {
+  padding: 11px 14px 11px 46px;
+}
 #createHighlightBtnDiv-vimeo-0 {
   position: relative;
-  bottom: 88px;
+  bottom: 0;
 }
 #createHighlightBtnDiv-vimeo-0 .cc-container {
-  bottom: 60px;
+  bottom: 148px;
   top: initial;
 }
 #createHighlightBtnDiv-vimeo-0 .cc-container .cc-btn-container-share {
