--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -4,8 +4,30 @@
     max-width 100%
   .video
     column(2/3, $cycle:2)
+    position relative
     iframe
       line-height 0
+    #createHighlightBtnDiv-vimeo-0
+      position absolute
+      bottom 53px
+      .cc-container
+        margin-top 0
+        top initial
+        left 10px
+        .cc-btn-container-share
+          bottom initial
+      .vimeo-highlights
+        height 10px
+        left 0
+        opacity 0
+        .impact-div
+          height 8px !important
+          top 0 !important
+    &:hover
+      #createHighlightBtnDiv-vimeo-0
+        width 100%
+        .vimeo-highlights
+          opacity 1
   .sidebar
     column(1/3, $cycle:2)
     h1
@@ -56,35 +78,6 @@
         color #999
         text-transform uppercase
         margin 30px 0 20px
-.video
-    &:hover
-        .cc-container
-            width 200px
-            .cc-btn-container-share
-                opacity 1
-                bottom 50px
-            #plus-sign
-                -webkit-animation spin 400ms ease-in-out
-                animation: spin 400ms ease-in-out
 
-            .cc-btn-container
-                .cc-btn-share
-                    padding: 8px 10px 8px 38px
-                    font-size: 14px
-                .cc-btn
-                    background-color rgba(0, 0, 0, 0.5)
-                    border 2px solid #fff
-                .cc-btn-text
-                    display inline
-                .cc-btn-highlight
-                    padding 11px 14px 11px 46px
 
-#createHighlightBtnDiv-vimeo-0
-  position relative
-  bottom 0
-  .cc-container
-    bottom 148px
-    top initial
-    .cc-btn-container-share
-      bottom initial
           
