--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -809,6 +809,7 @@ nav.main-nav .menu-icon .sh3 {
   width: 65.66666666666666%;
   margin-left: 0%;
   margin-right: 3%;
+  position: relative;
 }
 .landing .video::after {
   content: '';
@@ -829,6 +830,33 @@ nav.main-nav .menu-icon .sh3 {
 }
 .landing .video iframe {
   line-height: 0;
+}
+.landing .video #createHighlightBtnDiv-vimeo-0 {
+  position: absolute;
+  bottom: 53px;
+}
+.landing .video #createHighlightBtnDiv-vimeo-0 .cc-container {
+  margin-top: 0;
+  top: initial;
+  left: 10px;
+}
+.landing .video #createHighlightBtnDiv-vimeo-0 .cc-container .cc-btn-container-share {
+  bottom: initial;
+}
+.landing .video #createHighlightBtnDiv-vimeo-0 .vimeo-highlights {
+  height: 10px;
+  left: 0;
+  opacity: 0;
+}
+.landing .video #createHighlightBtnDiv-vimeo-0 .vimeo-highlights .impact-div {
+  height: 8px !important;
+  top: 0 !important;
+}
+.landing .video:hover #createHighlightBtnDiv-vimeo-0 {
+  width: 100%;
+}
+.landing .video:hover #createHighlightBtnDiv-vimeo-0 .vimeo-highlights {
+  opacity: 1;
 }
 .landing .sidebar {
   float: left;
@@ -943,42 +971,6 @@ nav.main-nav .menu-icon .sh3 {
   color: #999;
   text-transform: uppercase;
   margin: 30px 0 20px;
-}
-.video:hover .cc-container {
-  width: 200px;
-}
-.video:hover .cc-container .cc-btn-container-share {
-  opacity: 1;
-  bottom: 50px;
-}
-.video:hover .cc-container #plus-sign {
-  -webkit-animation: spin 400ms ease-in-out;
-  animation: spin 400ms ease-in-out;
-}
-.video:hover .cc-container .cc-btn-container .cc-btn-share {
-  padding: 8px 10px 8px 38px;
-  font-size: 14px;
-}
-.video:hover .cc-container .cc-btn-container .cc-btn {
-  background-color: rgba(0,0,0,0.5);
-  border: 2px solid #fff;
-}
-.video:hover .cc-container .cc-btn-container .cc-btn-text {
-  display: inline;
-}
-.video:hover .cc-container .cc-btn-container .cc-btn-highlight {
-  padding: 11px 14px 11px 46px;
-}
-#createHighlightBtnDiv-vimeo-0 {
-  position: relative;
-  bottom: 0;
-}
-#createHighlightBtnDiv-vimeo-0 .cc-container {
-  bottom: 148px;
-  top: initial;
-}
-#createHighlightBtnDiv-vimeo-0 .cc-container .cc-btn-container-share {
-  bottom: initial;
 }
 footer {
   background-color: #2e3341;
