--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -5,6 +5,8 @@
   .video
     column(2/3, $cycle:2)
     position relative
+    +below($md)
+      span()
     iframe
       line-height 0
     #createHighlightBtnDiv-vimeo-0
@@ -30,6 +32,8 @@
           opacity 1
   .sidebar
     column(1/3, $cycle:2)
+    +below($md)
+      display none
     h1
       text-transform uppercase
       color $link-color
@@ -42,6 +46,14 @@
     &-thumb
       column(1/4, $cycle:4)
       height 145px
+      +below($md)
+        column(1/2, $cycle:2)
+        height auto
+        margin-bottom 20px
+        text-align center
+        +below($xs)
+          span()
+          text-align center
       a
         display inline-block
       img
