--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -6,7 +6,11 @@
     column(2/3, $cycle:2)
     position relative
     +below($md)
-      span()
+      span($cycle:0)
+      max-width 750px
+      float none !important
+      margin-left auto
+      margin-right auto !important
     iframe
       line-height 0
     #createHighlightBtnDiv-vimeo-0
