--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -13,27 +13,8 @@
       margin-right auto !important
     iframe
       line-height 0
-    // #createHighlightBtnDiv-vimeo-0
-    //   position absolute
-    //   bottom 53px
-    //   .cc-container
-    //     margin-top 0
-    //     top initial
-    //     left 10px
-    //     .cc-btn-container-share
-    //       bottom initial
-    //   .vimeo-highlights
-    //     height 10px
-    //     left 0
-    //     opacity 0
-    //     .impact-div
-    //       height 8px !important
-    //       top 0 !important
-    // &:hover
-    //   #createHighlightBtnDiv-vimeo-0
-    //     width 100%
-    //     .vimeo-highlights
-    //       opacity 1
+    #createHighlightBtnDiv-vimeo-0
+      top -5px
   .sidebar
     column(1/3, $cycle:2)
     +below($md)
