switched sports videos to brightcove player

--- a/_stylus/layout/buttons.styl
+++ b/_stylus/layout/buttons.styl
@@ -4,6 +4,11 @@
 a
     // background-color #aff
 
+button
+    padding 5px 15px
+    border 0
+    cursor pointer
+
 .cta
     color #fff
     padding 13px 25px
