--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -17,6 +17,7 @@
       height 0
       padding-bottom 56.25%
       iframe
+      .bc-player
         line-height 0
         position absolute
         top 0
@@ -28,6 +29,11 @@
         width 100%
         bottom -55px
         top auto
+      .vb-container.vb-v2
+        bottom -60px
+        position absolute
+        top auto
+        width 100%
             
   .sidebar
     column(1/3, $cycle:2)
