updated gems, vimeo player working with vibbify as well

--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -2,7 +2,7 @@
 .landing
   img
     max-width 100%
-  .video-wrapper
+  .vids-wrapper
     column(2/3, $cycle:2)
     margin-bottom 60px
     background #000
@@ -44,7 +44,7 @@
       color $link-color
       font-size 24px
       text-align center
-  .other-videos
+  .other-vids
     margin-top 40px
     span()
     uncycle(2)
@@ -86,7 +86,7 @@
         color #fff
         font-size 24px
         text-align center
-    .other-videos
+    .other-vids
       background #33424D
       padding-bottom 50px
       h2
